--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+.main {
+  display: flex;
+  justify-content: center;
+}
+
+.box {
+  margin: 20px;
+  border: 2px solid grey;
+  width: 500px;
+  height: 500px;
+
   text-align: center;
-}
+  font-size: 20px;
+  font-weight: 600;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.img-box img{
+  width: 400px;
+  height: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.WIN {
+  border: 5px solid green;
+}
+
+.LOSE{
+  border: 5px solid red;
+}
+
+.DEFEAT{
+  border: 5px solid black;
+}
+
+.btn {
+  border: none;
+  background: white;
+  cursor: pointer;
+}
+
+.btn img {
+  width: 40px;
+  margin: 10px;
 }
